test_resources/lit_class/errors/test2.yr

trait X {
    pub fn foo (self) {
        bar ();
    }

    pub fn bar (self) {}
}

class A {
    impl X;
}
